--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-ts-tradingview-widgets": "^1.0.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
@@ -18,6 +22,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.0"
