--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
     "react": "^18.2.0",
