--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "server": "concurrently \"npx tsc -w\" \"nodemon -q dist/index.js\"",
     "start": "node dist/index.js",
-    "build": "rm -rf dist && npx tsc"
+    "build": "rm -rf dist && npx tsc",
+    "data:import": "ts-node src/data/seeder.ts",
+    "data:destroy": "ts-node src/data/seeder.ts -d"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -22,6 +24,7 @@
     "@types/node": "^18.11.7",
     "concurrently": "^7.5.0",
     "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
